Fix for seach action overflowing available space

--- a/app/assets/stylesheets/design/search/_results.scss
+++ b/app/assets/stylesheets/design/search/_results.scss
@@ -8,7 +8,7 @@
     float: right;
     margin-bottom: 0;
     position: relative;
-    right: -10px;
+    right: 0px;
     top: 10px;
 
     li {
